[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Art/background.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Audio/8bit Music.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/gameover.ogg" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.06039, -0.643402, 0, 0, 0, 0, 1022.16, -0.643402, 0, 0, 0, 0, 1022.16, 598.116, 0, 0, 0, 0, -1.06039, 598.116, 0, 0, 0, 0, -1.06039, -0.643402 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510, 300 )
scale = Vector2( 1.29, 0.75 )
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( -506, -219 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerSpawnPosition" type="Position2D" parent="."]
position = Vector2( 518, 375 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -1.06039, -0.643402 )
rotation = 3.04215e-08

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
